# osu-Beatmaps-Downloader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.example.yaml  downloader.py  pyproject.toml
release/: README.txt
src/: client.rs  downloader.rs  main.rs  settings.rs
src/client/: nerinyan.rs  osu.rs  osu_api.rs
