[package]
name = "downloader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [[bin]]
# name = "osu-Beatmap-Downloader"
# path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full", "rt", "rt-multi-thread"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_extras = "0.31.1"
eyre = "0.6.12"
strfmt = "0.2.4"
reqwest = { version = "0.12.15", features = ["json"] }
crossbeam = "0.8.4"
rosu-v2 = "0.10.0"
log = { version = "0.4.27", features = ["std"] }
rfd = "0.15.3"
serde_with = { version = "3.12.0", features = ["json"] }
async-trait = "0.1.88"
urlencoding = "2.1.3"
